fix slier on tablet

--- a/assets/section-hero-shop-all.css
+++ b/assets/section-hero-shop-all.css
@@ -823,7 +823,7 @@
     }
 
     .imagen-info-text{
-        left: 0;
+        left: 0 !important;
     }
 
 
